<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Register">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/api_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/nama_lengkap"
        android:inputType="textPersonName"
        android:layout_marginTop="32dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#999999"
        android:drawableStart="@drawable/person_24dp_000000_fill0_wght400_grad0_opsz24__1_"
        android:drawablePadding="8dp"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/email2"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#999999"
        android:drawableStart="@drawable/mail_24dp_000000_fill0_wght400_grad0_opsz24__1_"
        android:drawablePadding="8dp"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintTop_toBottomOf="@id/fullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#999999"
        android:drawableStart="@drawable/lock_24dp_000000_fill0_wght400_grad0_opsz24__1_"
        android:drawablePadding="8dp"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/konfirmasi_password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#999999"
        android:drawableStart="@drawable/lock_24dp_000000_fill0_wght400_grad0_opsz24__1_"
        android:drawablePadding="8dp"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/daftar_sekarang"
        android:background="@drawable/button_rounded_red"
        app:backgroundTint="@null"
        android:textColor="#FFFFFF"
        android:layout_marginTop="32dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sudah_punya_akun"
        android:textColor="#999999"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginLink"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masuk"
        android:textColor="#03A9F4"
        android:layout_marginStart="4dp"
        app:layout_constraintBaseline_toBaselineOf="@id/alreadyHaveAccount"
        app:layout_constraintStart_toEndOf="@id/alreadyHaveAccount"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>