<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/api_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_margin="16dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#999999"
        android:drawableStart="@drawable/mail_24dp_000000_fill0_wght400_grad0_opsz24__1_"
        android:drawablePadding="8dp"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="16dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#999999"
        android:drawableStart="@drawable/lock_24dp_000000_fill0_wght400_grad0_opsz24__1_"
        android:drawablePadding="8dp"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/button_rounded_red"
        app:backgroundTint="@null"
        android:textColor="#FFFFFF"
        android:layout_margin="16dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belum_punya_akun"
        android:textColor="#3F51B5"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        android:textColor="#03A9F4"
        android:layout_marginStart="4dp"
        app:layout_constraintBaseline_toBaselineOf="@id/noAccount"
        app:layout_constraintStart_toEndOf="@id/noAccount"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>